--- a/artefact/problem_statement/problem.fr.tex
+++ b/artefact/problem_statement/problem.fr.tex
@@ -1,8 +1,8 @@
-\problemname{\problemyamlname{}}
+\problemname{}
 
 \illustration{0.3}{artefact.jpg}{}% source: deepai.org
 
-Depuis des siècles, les maîtres enchanteurs de Karwalia protègent le royaume en façonnant des artéfacts d'énergie pure. Cependant, un terrible fléau magique menace d'effacer à jamais leur savoir : les artéfacts se fragmentent et perdent leur puissance.
+Le royaume de Karwalia ne se porte pas bien. Depuis des siècles, ses maîtres enchanteurs protègent le royaume en façonnant des artéfacts d'énergie pure. Cependant, le terrible fléau magique (voir Problème~\ref{problem:elixir}) menace désormais d'effacer à jamais leur savoir. L'élaboration du \emph{Karwa-Élixir} est plus compliquée que prévue et demande la puissance d'un artéfact que vous ne possédez pas.
 
 Le Grand Karwarcaniste du royaume a découvert un moyen de restaurer leur puissance : un rituel de fusion énergétique. En combinant deux artéfacts adjacents, on peut en créer un plus puissant, au prix d'une dépense d'énergie égale à la somme de leurs forces. Malheureusement, le rituel est exigeant et accumule des coûts considérables.
 
@@ -19,7 +19,7 @@ Le coût total est alors de $5 + 9 + 15 = 29$.
 \begin{Input}
     L'entrée consiste en :
     \begin{itemize}
-        \item Une ligne contenant un entier $n$ ($1 \leq n \leq 3000$), le nombres d'artéfacts.
+        \item Une ligne contenant un entier $n$ ($1 \leq n \leq 3000$), le nombre d'artéfacts.
         \item $n$ lignes, chacune contenant un entier entre $1$ et $10^{9}$ qui représente la force de l'artéfact.
     \end{itemize}
 \end{Input}
