--- a/derouteaquatique/problem_statement/problem.fr.tex
+++ b/derouteaquatique/problem_statement/problem.fr.tex
@@ -1,7 +1,7 @@
-\problemname{\problemyamlname{}}
+\problemname{}
 
-\illustration{0.3}{vecteezy_exploring-industrial-pipe-systems-underwater-ocean-depths_57834830.jpeg}{
-    From \href{https://www.vecteezy.com/free-photos/pipes}{vecteezy}
+\illustration{0.3}{ChatGPT Image Mar 31, 2025, 01_34_32 PM.png}{
+    CC BY-SA 4.0 by ChatGPT
 }
 
 Le KARWA (Kanalisation Aquatic Route for Wayward Adventurers) est un réseau complexe de canalisations souterraines conçu pour transporter de l'eau vers l'océan, sous la forme d'une grille $n \times m$. Cependant, il arrive parfois qu'un poisson s'y retrouve coincé !
