--- a/star/problem_statement/problem.fr.tex
+++ b/star/problem_statement/problem.fr.tex
@@ -1,4 +1,4 @@
-\problemname{\problemyamlname{}}
+\problemname{}
 
 \illustration{0.3}{image.png}{
     CC BY-SA 4.0 by gankogroup on \href{https://www.vecteezy.com/vector-art/4546680-vector-illustration-of-silhouette-alcohol-bottle}{vecteezy}
