--- a/wifi/problem_statement/problem.fr.tex
+++ b/wifi/problem_statement/problem.fr.tex
@@ -1,4 +1,4 @@
-\problemname{\problemyamlname{}}
+\problemname{}
 
 \illustration{0.3}{vecteezy_wifi-icon-vector_.jpg}{
     CC BY-SA 4.0 by nemanja on \href{https://www.vecteezy.com/vector-art/4849448-wifi-icon-vector}{vecteezy}
