--- a/elixir/problem_statement/problem.fr.tex
+++ b/elixir/problem_statement/problem.fr.tex
@@ -1,6 +1,7 @@
-\problemname{\problemyamlname{}}
+\problemname{}
+\label{problem:elixir}
 
-\illustration{0.2}{tube.png}{}
+\illustration{0.3}{Nk9jn7ps.jpeg}{}
 
 Dans le lointain royaume de Karwalia, les r\'ecoltes d\'ep\'erissent et le ciel s'assombrit chaque jour un peu plus. Le Karwachimiste royal, dernier espoir de la contr\'ee, a mis la main sur un manuscrit ancien: le c\'el\`ebre \emph{Codex Karwamique}. Selon cet ouvrage, il existerait un rem\`ede unique: le \emph{Karwa-\'Elixir}.
 Pour pr\'eparer cet \'elixir, il faut constituer une \emph{Karwa-collection} d'entiers dont:
@@ -26,5 +27,5 @@ Dans le premier exemple ci-dessous, il y a quatre possibilités :
 \end{Input}
 
 \begin{Output}
-    Un entier représentant le nombre de possibilités différentes qu'un ensemble de naturels somment à $S$ et dont le produit vaut $P$ (l'ordre de ces naturels n'importe évidemment pas).%Si ce n'est pas possible, écrivez $-1$.
+    Un entier représentant le nombre de possibilités différentes qu'un ensemble de naturels somment à $S$ et dont le produit vaut $P$ (l'ordre de ces naturels n'importe évidemment pas).
 \end{Output}
