added images for Caverne and Lettre

--- a/caverne/problem_statement/problem.fr.tex
+++ b/caverne/problem_statement/problem.fr.tex
@@ -1,11 +1,9 @@
 \problemname{\problemyamlname{}}
 
-%\illustration{0.3}{image.jpg}{
-%    Caption of the illustration (optional).
-%    CC BY-SA 4.0 by X on \href{https://example.com/reference-to-image}{Y}
-%}
+\illustration{0.3}{caverne.jpg}{
+    Caverne. CC BY-SA 4.0
+}
 
-% TODO: Remove this comment when you're done writing the problem statement.
 Vous êtes un spéléologue et votre métier est d'étudier les Kryptes Antiques Resultant de Wombats Archaïques (KARWA). Le but de votre travail est d'estimer le volume libre dans ces cavernes mystérieuses afin de les inonder pour créer des nappes phréatiques et y stocker de l'eau ! Pour cela, vous possédez un relevé topographique du sol et du plafond. Ces données vous viennent sous cette forme :
 \begin{itemize}
 \item Trois entiers $h$, $l$ et $p$ représentant la hauteur, la longueur et la profondeur d'un parallélépipède rectangle représentant la zone scannée.
