--- a/lettre/problem_statement/problem.fr.tex
+++ b/lettre/problem_statement/problem.fr.tex
@@ -1,9 +1,8 @@
 \problemname{Lettre}
 
-%\illustration{0.3}{image.jpg}{
-%    Caption of the illustration (optional).
-%    CC BY-SA 4.0 by X on \href{https://example.com/reference-to-image}{Y}
-%}
+\illustration{0.3}{lettre.jpg}{
+    Kiwi facteur.
+}
 
 Dans le monde des Kiwis Arrangés Régulièrement Wallons et Agressifs (KARWA), les kiwis sont très soucieux de leur consommation d'énergie et cherchent à optimiser tout ce qui est optimisable. Les postiers de ce monde ont donc horreur de devoir repasser deux fois par la même rue lors de leur tournée. Votre travail est donc de les rassurer en leur affirmant si oui ou non, il est possible d'avoir un chemin parfait.
 
