--- a/caverne/problem_statement/problem.fr.tex
+++ b/caverne/problem_statement/problem.fr.tex
@@ -23,5 +23,5 @@ On considère que si la hauteur du plafond et celle du sol sur le même mètre c
 \end{Input}
 
 \begin{Output}
-    Le volume de la caverne.
+    Un entier représentant le volume de la caverne.
 \end{Output}
