--- a/artefact/problem_statement/problem.fr.tex
+++ b/artefact/problem_statement/problem.fr.tex
@@ -2,7 +2,7 @@
 
 \illustration{0.3}{artefact.jpg}{}% source: deepai.org
 
-Le royaume de Karwalia ne se porte pas bien. Depuis des siècles, ses maîtres enchanteurs protègent le royaume en façonnant des artéfacts d'énergie pure. Cependant, le terrible fléau magique (voir Problème~\ref{problem:elixir}) menace désormais d'effacer à jamais leur savoir. L'élaboration du \emph{Karwa-Élixir} est plus compliquée que prévue et demande la puissance d'un artéfact que vous ne possédez pas.
+Le royaume de Karwalia ne se porte pas bien. Depuis des siècles, ses maîtres enchanteurs protègent le royaume en façonnant des artéfacts d'énergie pure. Cependant, le terrible fléau magique (voir Problème~\ref{problem:elixir}) menace désormais d'effacer à jamais leur savoir. L'élaboration du \emph{Karwa-Élixir} est plus compliquée que prévu et demande la puissance d'un artéfact que vous ne possédez pas.
 
 Le Grand Karwarcaniste du royaume a découvert un moyen de restaurer leur puissance : un rituel de fusion énergétique. En combinant deux artéfacts adjacents, on peut en créer un plus puissant, au prix d'une dépense d'énergie égale à la somme de leurs forces. Malheureusement, le rituel est exigeant et accumule des coûts considérables.
 
