Bancs de poisson: Added numerically correct testcase

--- a/bancdepoisson/problem_statement/problem.fr.tex
+++ b/bancdepoisson/problem_statement/problem.fr.tex
@@ -15,10 +15,10 @@ L'objectif est donc d'écrire un programme qui, connaissant les positions initia
     \begin{itemize}
         \item une ligne avec un entier $n$ ($1 \leq n \leq 10^{5}$), le nombre de poisson.
         \item une ligne avec $n$ entier $a_i$ ($0 \leq a_i \leq 10^{6}$), la position des poissons.
-        \item une ligne avec $n$ entier $v_i$ ($0 \leq v_i \leq 10^{6}$), la vitesse des poissons.
+        \item une ligne avec $n$ entier $v_i$ ($1 \leq v_i \leq 10^{6}$), la vitesse des poissons.
         \item une ligne avec un entier $c$ ($0 \leq c \leq 10^{6}$), la cible.
     \end{itemize}
-    Il est garantis que toutes les positions sont uniques.
+    Il est garantis que toutes les positions sont uniques. Et que la cible se trouve après la position la plus élevée des poissons.
 \end{Input}
 
 \begin{Output}
