Fix bs étoile, fix problems.yaml for etoile

--- a/artefact/problem_statement/problem.fr.tex
+++ b/artefact/problem_statement/problem.fr.tex
@@ -4,7 +4,7 @@
 
 Le royaume de Karwalia ne se porte pas bien. Depuis des siècles, ses maîtres enchanteurs protègent le royaume en façonnant des artéfacts d'énergie pure. Cependant, le terrible fléau magique (voir Problème~\ref{problem:elixir}) menace désormais d'effacer à jamais leur savoir. L'élaboration du \emph{Karwa-Élixir} est plus compliquée que prévu et demande la puissance d'un artéfact que vous ne possédez pas.
 
-Le Grand Karwarcaniste du royaume a découvert un moyen de restaurer leur puissance : un rituel de fusion énergétique. En combinant deux artéfacts adjacents, on peut en créer un plus puissant, au prix d'une dépense d'énergie égale à la somme de leurs forces. Malheureusement, le rituel est exigeant et accumule des coûts considérables.
+Le Grand Karwarcaniste du royaume a découvert un moyen de restaurer leur puissance : un rituel de fusion énergétique. En combinant deux artéfacts \textbf{adjacents}, on peut en créer un plus puissant, au prix d'une dépense d'énergie égale à la somme de leurs forces. Malheureusement, le rituel est exigeant et accumule des coûts considérables.
 
 Le Conseil des Sages vous a confié la tâche de minimiser le coût total du rituel pour restaurer un unique artéfact ultime. Il vous revient d'optimiser ces fusions pour préserver le fragile équilibre magique du royaume.
 
