abysses: fix statement

--- a/abysses/problem_statement/problem.fr.tex
+++ b/abysses/problem_statement/problem.fr.tex
@@ -10,9 +10,9 @@ Ces poissons ont une particularité assez spéciale : ils ont des écailles réf
 
 Vous décidez donc d'en apprendre un peu plus sur cette espèce de poisson, plus particulièrement leurs positions. En effet, il semblerait qu'il y ait un certain schéma dans leurs positions.
 
-Pour ce faire, vous avez enregistré la position de tous les karwas aux alentours, mais le problème est qu'il y a plusieurs bandes de karwas au même endroit. Votre but est de déterminer combien de karwas font partie d'une bande étant donné un poisson spécifique.
+Pour ce faire, vous avez enregistré la position de tous les karwas aux alentours, mais le problème est qu'il y a plusieurs bancs de karwas au même endroit. Votre but est de déterminer combien de karwas font partie d'un banc étant donné un poisson spécifique.
 
-Vous avez remarqué que deux karwas font partie de la même bande si en envoyant de la lumière sur un des karwa, la lumière est réfléchie sur l'autre karwa. De plus il y a une particularitée assez étrange si la lumière passe à moins de 0.0001m (compris) du karwa, la lumière est dévié vers ce karwa.
+Vous avez remarqué que deux karwas font partie dans le même banc si en envoyant de la lumière sur un des karwa, la lumière est réfléchie sur l'autre karwa. De plus il y a une particularitée assez étrange si la lumière passe à moins de 0.0001 mètre (compris) du karwa, la lumière est dévié vers ce karwa.
 
 Heureusement, vous avez aussi enregistré dans quelle direction chaque karwa réfléchit la lumière. Cette direction est exprimée en degrés et étonnamment, c'est toujours un nombre entier.
 
@@ -34,5 +34,5 @@ Heureusement, vous avez aussi enregistré dans quelle direction chaque karwa ré
 \end{Input}
 
 \begin{Output}
-    Un entier représentant la taille de la bande.
+    Un entier représentant la taille du banc.
 \end{Output}
