--- a/lettre/problem_statement/solution.fr.tex
+++ b/lettre/problem_statement/solution.fr.tex
@@ -1,10 +1,12 @@
 \begin{frame}
     \frametitle{\problemtitle}
-    La solution demandée était de tester si la composante connexe du bureau de poste est un graphe eulérien
+    \begin{block}{Problème}
+        Déterminer si la composante connexe du bureau de poste admet un parcours eulérien (passant une seule fois sur chaque arête).
+    \end{block}
     \begin{itemize}
-        \item<+-> Solution naïve, essayer tous les chemins jusqu'à trouver le bon. C'est trop naif, il faut faire plus fin.
-        \item<+-> Un graphe eulérien possède soit $2$, soit $0$ sommets avec un nombre d'arrêtes impair. 
-        \item<+-> Une solution en $\mathcal{O}(n)$ est donc de précalculer le nombre d'arrête pour chaque sommets, puis effectuer un BFS/DFS et compter le nombre de sommet avec un nombre impair d'arrête.
+        \item<+-> Solution naïve, essayer tous les chemins jusqu'à trouver le bon. C'est trop naïf, il faut faire plus fin.
+        \item<+-> Un graphe admet un parcours eulérien si et seulement s'il possède soit $2$, soit $0$ sommets avec un nombre d'arêtes impair.
+        \item<+-> Une solution en $\mathcal{O}(n)$ est donc de précalculer le nombre d'arêtes pour chaque sommet, puis d'effectuer un BFS/DFS et de compter le nombre de sommets avec un nombre impair d'arêtes.
     \end{itemize}
     % \solvestats
 \end{frame}
