étoile: update statement

--- a/etoile/problem_statement/problem.fr.tex
+++ b/etoile/problem_statement/problem.fr.tex
@@ -4,7 +4,7 @@
     CC BY-SA 4.0 by gankogroup on \href{https://www.vecteezy.com/vector-art/4546680-vector-illustration-of-silhouette-alcohol-bottle}{vecteezy}
 }
 
-En tant que président du KARWA, le fameux Klan des Assoiffés Rassemblés pour le Whisky et l'Apéro, vous vous retrouvez avec une montagne de bacs vides. Rémi, le responsable des bacs, décide d'en faire une immense sculpture. Cependant, il manque d'inspiration pour choisir une forme... 
+En tant que président du KARWA, le fameux Klan des Assoiffés Rassemblés pour le Whisky et l'Apéro, vous vous retrouvez avec une montagne de bacs vides. Piwy, le responsable des bacs, décide d'en faire une immense sculpture. Cependant, il manque d'inspiration pour choisir une forme... 
 C'est alors que vous avez une idée de génie : construire une étoile géante ! Mais un problème se pose : quelle sera la taille de cette étoile ?
 
 En effet, vous ne voulez pas viser trop grand et ne pas pouvoir terminer l'étoile complètement.
