--- a/caverne/problem_statement/solution.fr.tex
+++ b/caverne/problem_statement/solution.fr.tex
@@ -8,5 +8,5 @@
         \item<+-> Le volume pris par la roche est la somme de chaque matrice, on a donc $\mathcal{O}(l\cdot p)$.
         \item<+-> Pour éviter de dépasser la hauteur, il suffit de prendre le maximum entre la hauteur et la somme.
     \end{itemize}
-    % \solvestats
+    \solvestats
 \end{frame}
