--- a/derouteaquatique/problem_statement/solution.fr.tex
+++ b/derouteaquatique/problem_statement/solution.fr.tex
@@ -14,5 +14,5 @@
         \item En Python, ces astuces font gagner jusqu'à \textbf{$2.5$ secondes} sur nos grandes instances !
     \end{itemize}
 
-    %\pause\solvestats
+    \solvestats
 \end{frame}
