--- a/elixir/problem_statement/solution.fr.tex
+++ b/elixir/problem_statement/solution.fr.tex
@@ -11,5 +11,5 @@
         \item Il est alors facile de vérifier combien de ces possibilités conduisent à un produit $P$.
     \end{itemize}
 
-    %\pause\solvestats
+    \solvestats
 \end{frame}
