--- a/gareexpress/problem_statement/solution.fr.tex
+++ b/gareexpress/problem_statement/solution.fr.tex
@@ -11,6 +11,5 @@
         \texttt{print((lambda N,X:-N \% X + N)(int(input()), int(input())))}
         \]
     \end{itemize}
-
-    %\pause\solvestats
+    \solvestats
 \end{frame}
