--- a/lettre/problem_statement/solution.fr.tex
+++ b/lettre/problem_statement/solution.fr.tex
@@ -8,5 +8,5 @@
         \item<+-> Un graphe admet un parcours eulérien si et seulement s'il possède soit $2$, soit $0$ sommets avec un nombre d'arêtes impair.
         \item<+-> Une solution en $\mathcal{O}(n)$ est donc de précalculer le nombre d'arêtes pour chaque sommet, puis d'effectuer un BFS/DFS et de compter le nombre de sommets avec un nombre impair d'arêtes.
     \end{itemize}
-    % \solvestats
+    \solvestats
 \end{frame}
