--- a/secondsinojapanesewar/problem_statement/solution.fr.tex
+++ b/secondsinojapanesewar/problem_statement/solution.fr.tex
@@ -8,5 +8,5 @@
         \item<+-> \textbf{Observation :} Une boucle peut s'exprimer comme une chemin de A à B et de B à A (en interdisant )
         \item<+-> \textbf{Solution :} On fait un 0-1 bfs pour chaque ville candidate.
     \end{itemize}
-    % \solvestats
+    \solvestats
 \end{frame}
