--- a/solution_footer.tex
+++ b/solution_footer.tex
@@ -10,13 +10,13 @@
         % git rev-list --all -- main | wc -l
         \item ??? commits (KARWa 2024 : 193)
         % bt stats
-        \item ??? test cases secrets (KARWa 2024 : 693) ($\approx ??$ par problème !)
-        \item ?? solutions du jury (KARWa 2024 : 28)
+        \item 611 test cases secrets pour 12 problèmes (KARWa 2024 : 693 pour 13 problèmes) ($\approx 51$ par problème !)
+        \item 39 solutions du jury (KARWa 2024 : 28)
         % cd main ; for dir in */ ; do echo "$dir $(cloc --by-file ${dir}submissions/accepted | tail -n 4 | head -n 1)" ; done
         % cd main; for dir in */ ; do cloc --by-file ${dir}submissions/accepted | tail -n 4 | head -n 1 | tr -s ' ' | cut -d ' ' -f 4 ; done
         \item Le nombre minimum de lignes dont le jury a eu besoin pour résoudre tous les problèmes est
-        \[ ?+? = ?. \]
-        En moyenne $?$ lignes par problème.
+        \[ 29+6+3+23+15+6+1+33+3+17+12+13 = 161. \]
+        En moyenne $13$ lignes par problème.
       \end{itemize}
     \end{block}
     %\footnotetext{\emph{After} codegolfing}
