--- a/solution_header.tex
+++ b/solution_header.tex
@@ -2,4 +2,5 @@
 \subtitle{Présentation des Solutions}
 \begin{frame}
 \titlepage
+{\center \includegraphics[width=\textwidth]{logo.png}}
 \end{frame}
