--- a/wifi/problem_statement/solution.fr.tex
+++ b/wifi/problem_statement/solution.fr.tex
@@ -30,5 +30,5 @@
         \textbf{Complexité} : $\mathcal{O}(n \log n + q\log q)$
     \end{block}
 
-    %\pause\solvestats
+    \solvestats
 \end{frame}
