--- a/bancdepoissons/problem_statement/solution.fr.tex
+++ b/bancdepoissons/problem_statement/solution.fr.tex
@@ -6,5 +6,5 @@
         \item<+-> Naive solution: do something stupid. $\mathcal O(2^n)$ is too slow!
         \item<+-> Instead, just compute the answer. $\mathcal O(1)$.
     \end{itemize}
-    % \solvestats
+    \solvestats
 \end{frame}
