Small fix for solutions

--- a/lettre/problem_statement/solution.fr.tex
+++ b/lettre/problem_statement/solution.fr.tex
@@ -3,6 +3,7 @@
     \begin{block}{Problème}
         Déterminer si la composante connexe du bureau de poste admet un parcours eulérien (passant une seule fois sur chaque arête).
     \end{block}
+    \pause
     \begin{itemize}
         \item<+-> Solution naïve, essayer tous les chemins jusqu'à trouver le bon. C'est trop naïf, il faut faire plus fin.
         \item<+-> Un graphe admet un parcours eulérien si et seulement s'il possède soit $2$, soit $0$ sommets avec un nombre d'arêtes impair.
