--- a/wifi/problem_statement/solution.fr.tex
+++ b/wifi/problem_statement/solution.fr.tex
@@ -13,8 +13,7 @@
             \item<+-> Trier les antennes.
             \item<+-> Pour chaque query, on lance une binary search (recherche dichotomique) pour trouver l'antenne la plus proche.
         \end{itemize}
-        \pause
-        \textbf{Complexité} : $\mathcal{O}(n \log n + q\log n)$
+        \onslide<+->{\textbf{Complexité} : $\mathcal{O}(n \log n + q\log n)$}
     \end{block}
 \end{frame}
 
