--- a/solution_footer.fr.tex
+++ b/solution_footer.fr.tex
@@ -7,10 +7,11 @@
 \begin{frame}{Random facts}
     \begin{block}{Jury work}
       \begin{itemize}[<+->]
+        \item 12 problèmes (KARWa 2024 : 13 problèmes)
         % git rev-list --all -- main | wc -l
-        \item ??? commits (KARWa 2024 : 193)
+        \item 157 commits (KARWa 2024 : 193)
         % bt stats
-        \item 611 test cases secrets pour 12 problèmes (KARWa 2024 : 693 pour 13 problèmes) ($\approx 51$ par problème !)
+        \item 611 test cases secrets (KARWa 2024 : 693) ($\approx 51$ par problème !)
         \item 39 solutions du jury (KARWa 2024 : 28)
         % cd main ; for dir in */ ; do echo "$dir $(cloc --by-file ${dir}submissions/accepted | tail -n 4 | head -n 1)" ; done
         % cd main; for dir in */ ; do cloc --by-file ${dir}submissions/accepted | tail -n 4 | head -n 1 | tr -s ' ' | cut -d ' ' -f 4 ; done
