--- a/abysses/problem_statement/solution.fr.tex
+++ b/abysses/problem_statement/solution.fr.tex
@@ -1,10 +1,12 @@
 \begin{frame}
     \frametitle{\problemtitle}
     \begin{itemize}
-        % TODO: Remove this comment when you're done writing the solutions.
-        \item<+-> \textbf{Problem:} Print $4\sqrt n$ with sufficiently many digits.
-        \item<+-> Naive solution: do something stupid. $\mathcal O(2^n)$ is too slow!
-        \item<+-> Instead, just compute the answer. $\mathcal O(1)$.
+        \begin{block}{Problème}
+            On a $n$ poisson avec des directions, déterminer la taille du banc étant donné un poissoné donné.
+        \end{block}
+        \item<+-> \textbf{Solution :} Étant donné un poisson $i$ on regarde quel poisson celui-ci redirige la lumière. On répète cette opération jusqu'a ce qu'il ne reste plus de poisson ou que le poisson pointe dans le vide. 
+        \item<+-> \textbf{Complexitée :} $\mathcal{O}(n^2)$.
+        \item<+-> \textbf{Challenge :} Il y a moyen de le résoudre en $\mathcal{O}(n log n) ! $
     \end{itemize}
     \solvestats
 \end{frame}
