update sol etoile

--- a/etoile/problem_statement/solution.fr.tex
+++ b/etoile/problem_statement/solution.fr.tex
@@ -7,7 +7,7 @@
         \item<+-> Solution Naïve : Générer l'étoile étape par étape $\mapsto$ Trop lent.
         \item<+-> \textbf{Observation :} Le nombre de bacs nécéssaire pour une étoile peut s'exprimer comme $n^2 + (n-1)^2$ où n est la taille de l'étoile (centre compris).
         \item<+-> \textbf{Solution :} Résoudre l'équation. $\mathcal{O}(1)$
-        \item<+-> \textbf{Solution alternative:} Faire un binary search sur la fonction. $\mathcal{O}(n log n)$
+        \item<+-> \textbf{Solution alternative:} Faire un binary search sur la fonction. $\mathcal{O}(log n)$
     \end{itemize}
     \solvestats
 \end{frame}
